<resources>
    <string name="app_name">Shoe Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="welcome_to_shoe_store_app">Welcome to Shoe Store app</string>
    <string name="tap_next_button_to_explore_the_app">This app is built as part of Udacity nanodegree
        program. Students will apply their skills in building layouts and navigation files
        by building a Shoe Store app "\n"Tap next button to explore the app</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="log_out">Log out</string>
    <string name="add_button">Add button</string>
    <string name="company_name">Company name</string>
    <string name="shoe_name">Shoe name</string>
    <string name="size">Size</string>
    <string name="Description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="_double">%d</string>
    <string name="welcome">Welcome</string>
    <string name="onboarding">Onboarding</string>
    <string name="shoes_list">Shoes list</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="instructions">Instructions</string>
    <string name="onboarding_text">Use + button to add your favourite shoes to the list. Please click next button to explore the app.</string>
</resources>
