<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.ui.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_left"
            app:popEnterAnim="@anim/slide_in_right" />
        <action
            android:id="@+id/action_loginFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment" />
        <argument
            android:name="isLogout"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.ui.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_onboardingFragment"
            app:destination="@id/onboardingFragment"
            app:enterAnim="@anim/slide_in_left"
            app:popEnterAnim="@anim/slide_in_right" />
    </fragment>
    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.udacity.shoestore.ui.OnboardingFragment"
        android:label="@string/onboarding"
        tools:layout="@layout/fragment_onboarding" >
        <action
            android:id="@+id/action_onboardingFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:enterAnim="@anim/slide_in_left"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/slide_in_right"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListingFragment"
        android:name="com.udacity.shoestore.ui.ShoeListingFragment"
        android:label="@string/shoes_list"
        tools:layout="@layout/fragment_shoe_listing" >
        <action
            android:id="@+id/action_shoeListingFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/slide_in_left"
            app:popEnterAnim="@anim/slide_in_right" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.ui.ShoeDetailFragment"
        android:label="@string/add_shoe"
        tools:layout="@layout/fragment_shoe_detail" >
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment" />
    </fragment>
    <action
        android:id="@+id/log_out"
        app:destination="@id/loginFragment" />
</navigation>