<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Linearlayout is a good choice here since the layout has
    few views which are aligned vertically-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.WelcomeFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_text"
            style="@style/HeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/welcome_to_shoe_store_app" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/tap_next_button_to_explore_the_app"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/next"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    </LinearLayout>
</layout>